crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_page_0009.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title>연구회 유형 및 지원 예산</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="table-bug_style.css"></head><body><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps7" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs74">[붙임 7]</span></div><div class="hls ps58" style="line-height:7.06mm;white-space:nowrap;left:0.00mm;top:7.41mm;height:7.06mm;width:170.00mm;"><span class="hrt cs76">멘토링 활동 계획서( &nbsp;월)</span></div><div class="hls ps57" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:20.28mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps57" style="line-height:144.13mm;white-space:nowrap;left:0.00mm;top:27.87mm;height:144.13mm;width:170.00mm;"><div class="htb" style="left:0.49mm;width:169.21mm;top:0.49mm;height:144.13mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 174.21 149.13" style="left:-2.5mm;top:-2.5mm;width:174.21mm;height:149.13mm;"><defs></defs><path d="M0,0 L0,143.15" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M33.55,0 L33.55,143.15" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M112.38,0 L112.38,13.5" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M134.31,0 L134.31,13.5" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M134.31,52.27 L134.31,143.15" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M150.8,52.27 L150.8,143.15" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M168.22,0 L168.22,143.15" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,0 L168.42,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.06,13.5 L168.28,13.5" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,38.77 L168.28,38.77" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.2,52.27 L168.42,52.27" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,61.2 L168.42,61.2" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.06,73.7 L168.28,73.7" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,85.27 L168.28,85.27" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,96.85 L168.28,96.85" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,108.42 L168.28,108.42" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,120 L168.28,120" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,131.57 L168.28,131.57" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.2,143.15 L168.42,143.15" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:33.55mm;height:13.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.45mm;"><div class="hls ps62" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:1.76mm;height:4.59mm;width:31.55mm;"><span class="hrt cs127">동아리명</span></div></div></div></div><div class="hce" style="left:33.55mm;top:0mm;width:78.83mm;height:13.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.45mm;"><div class="hls ps62" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:1.58mm;height:3.53mm;width:76.83mm;"></div></div></div></div><div class="hce" style="left:112.38mm;top:0mm;width:21.93mm;height:13.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.45mm;"><div class="hls ps62" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:1.76mm;height:4.59mm;width:19.92mm;"><span class="hrt cs75">대표학생</span></div></div></div></div><div class="hce" style="left:134.31mm;top:0mm;width:33.91mm;height:13.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.45mm;"><div class="hls ps61" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:31.91mm;"></div></div></div></div><div class="hce" style="left:0mm;top:13.5mm;width:33.55mm;height:25.27mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:10.34mm;"><div class="hls ps63" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:1.76mm;height:4.59mm;width:31.55mm;"><span class="hrt cs75">동아리원</span></div></div></div></div><div class="hce" style="left:33.55mm;top:13.5mm;width:134.67mm;height:25.27mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:7.36mm;"><div class="hls ps64" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:132.67mm;"></div><div class="hls ps64" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:5.79mm;height:3.53mm;width:132.67mm;"></div></div></div></div><div class="hce" style="left:0mm;top:38.77mm;width:33.55mm;height:13.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.45mm;"><div class="hls ps62" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:1.76mm;height:4.59mm;width:31.55mm;"><span class="hrt cs75">활동목표</span></div></div></div></div><div class="hce" style="left:33.55mm;top:38.77mm;width:134.67mm;height:13.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.45mm;"><div class="hls ps6" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:132.67mm;"></div></div></div></div><div class="hce" style="left:0mm;top:52.27mm;width:33.55mm;height:8.93mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.17mm;"><div class="hls ps20" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.59mm;width:31.55mm;"><span class="hrt cs75">일 정</span></div></div></div></div><div class="hce" style="left:33.55mm;top:52.27mm;width:100.76mm;height:8.93mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.17mm;"><div class="hls ps20" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.59mm;width:98.75mm;"><span class="hrt cs75">멘토 활동 및 내용</span></div></div></div></div><div class="hce" style="left:134.31mm;top:52.27mm;width:16.5mm;height:8.93mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.17mm;"><div class="hls ps20" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.59mm;width:14.49mm;"><span class="hrt cs75">시간</span></div></div></div></div><div class="hce" style="left:150.8mm;top:52.27mm;width:17.42mm;height:8.93mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.17mm;"><div class="hls ps20" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.59mm;width:15.41mm;"><span class="hrt cs75">멘토</span></div></div></div></div><div class="hce" style="left:0mm;top:61.2mm;width:33.55mm;height:12.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.37mm;"><div class="hls ps48" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:31.55mm;"><span class="hrt cs72">2026년</span></div><div class="hls ps48" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:4.23mm;height:3.53mm;width:31.55mm;"><span class="hrt cs72">&nbsp;&nbsp;&nbsp;월 &nbsp;&nbsp;&nbsp;일 ( &nbsp;&nbsp;)</span></div></div></div></div><div class="hce" style="left:33.55mm;top:61.2mm;width:100.76mm;height:12.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.95mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:61.2mm;width:16.5mm;height:12.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.95mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:61.2mm;width:17.42mm;height:12.5mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.95mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div><div class="hce" style="left:0mm;top:73.7mm;width:33.55mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.02mm;"><div class="hls ps48" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:31.55mm;"><span class="hrt cs72">&nbsp;&nbsp;&nbsp;월 &nbsp;&nbsp;&nbsp;일 ( &nbsp;&nbsp;)</span></div></div></div></div><div class="hce" style="left:33.55mm;top:73.7mm;width:100.76mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:73.7mm;width:16.5mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:73.7mm;width:17.42mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div><div class="hce" style="left:0mm;top:85.27mm;width:33.55mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:31.55mm;"></div></div></div></div><div class="hce" style="left:33.55mm;top:85.27mm;width:100.76mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:85.27mm;width:16.5mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:85.27mm;width:17.42mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div><div class="hce" style="left:0mm;top:96.85mm;width:33.55mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:31.55mm;"></div></div></div></div><div class="hce" style="left:33.55mm;top:96.85mm;width:100.76mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:96.85mm;width:16.5mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:96.85mm;width:17.42mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div><div class="hce" style="left:0mm;top:108.42mm;width:33.55mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:31.55mm;"></div></div></div></div><div class="hce" style="left:33.55mm;top:108.42mm;width:100.76mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:108.42mm;width:16.5mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:108.42mm;width:17.42mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div><div class="hce" style="left:0mm;top:120mm;width:33.55mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:31.55mm;"></div></div></div></div><div class="hce" style="left:33.55mm;top:120mm;width:100.76mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:120mm;width:16.5mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:120mm;width:17.42mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div><div class="hce" style="left:0mm;top:131.57mm;width:33.55mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:31.55mm;"></div></div></div></div><div class="hce" style="left:33.55mm;top:131.57mm;width:100.76mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:98.75mm;"></div></div></div></div><div class="hce" style="left:134.31mm;top:131.57mm;width:16.5mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps21" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:14.49mm;"></div></div></div></div><div class="hce" style="left:150.8mm;top:131.57mm;width:17.42mm;height:11.57mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.49mm;"><div class="hls ps20" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:15.41mm;"></div></div></div></div></div></div><div class="hls ps59" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:175.70mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps80" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:183.79mm;height:4.59mm;width:170.00mm;"><span class="hrt cs93">&nbsp;❍&nbsp;</span><span class="hrt cs75">전공동아리 대표학생과 사전에 교육일정을 협의 후 월 단위로 작성합니다.</span></div><div class="hls ps80" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:193.41mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps59" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:202.52mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps60" style="line-height:4.94mm;white-space:nowrap;left:0.00mm;top:209.89mm;height:4.94mm;width:170.00mm;"><span class="hrt cs87">확인자 &nbsp;: &nbsp;교사 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(인)</span></div></div></div><div class="hpN" style="left:105mm;top:287mm;width:9.53mm;height:3.81mm;"><span class="hrt cs0">- 9 -</span></div></div></body></html>
