crates/hwp-core/tests/snapshots/snapshot_tests__table_bug_page_0011.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title>연구회 유형 및 지원 예산</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="table-bug_style.css"></head><body><div class="hpa" style="width:210mm;height:297mm;"><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps7" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:170.00mm;"><span class="hrt cs74">[붙임 9]</span></div><div class="hls ps7" style="line-height:229.79mm;white-space:nowrap;left:0.00mm;top:5.64mm;height:229.79mm;width:170.00mm;"><div class="htG" style="left:0mm;width:163.09mm;top:0mm;height:244.07mm;display:inline-block;position:relative;vertical-align:middle;"><div class="htb" style="left:0.5mm;width:162.09mm;top:0.5mm;height:228.79mm;"><svg class="hs" viewBox="-2.5 -2.5 167.09 233.79" style="left:-2.5mm;top:-2.5mm;width:167.09mm;height:233.79mm;"><defs><pattern id="w_03" width="10" height="10" patternUnits="userSpaceOnUse"><rect width="10" height="10" fill="rgb(178,178,178)" /></pattern></defs><path fill="url(#w_03)" d="M0,178.58L162.09,178.58L162.09,184.1L0,184.1L0,178.58Z "></path><path d="M14.76,19.83 L14.76,79.49" style="stroke:#939393;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M37.59,19.83 L37.59,79.49" style="stroke:#939393;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M77.59,42.27 L77.59,60.5" style="stroke:#939393;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M114.6,42.27 L114.6,60.5" style="stroke:#939393;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M162.09,79.49 L162.09,81.84" style="stroke:#5D5D5D;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.15,19.83 L162.24,19.83" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.3;"></path><path d="M14.7,42.27 L162.15,42.27" style="stroke:#939393;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M14.7,60.5 L162.15,60.5" style="stroke:#939393;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.15,79.49 L162.24,79.49" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.3;"></path><path d="M-0.35,153.8 L162.44,153.8" style="stroke:#5D5D5D;stroke-linecap:butt;stroke-width:0.7;"></path><path d="M-0.35,178.58 L162.44,178.58" style="stroke:#5D5D5D;stroke-linecap:butt;stroke-width:0.7;"></path><path d="M-0.06,185.22 L162.15,185.22" style="stroke:#5D5D5D;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.06,219.99 L162.15,219.99" style="stroke:#58595B;stroke-linecap:butt;stroke-width:0.12;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:162.09mm;height:14.83mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:1.77mm;"><div class="hls ps19" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:161.09mm;"><span class="hrt cs17">[별지 제12호서식]</span></div><div class="hls ps40" style="line-height:5.64mm;white-space:nowrap;left:0.00mm;top:5.64mm;height:5.64mm;width:161.09mm;"><span class="hrt cs36">성범죄 경력 조회&nbsp;</span><span class="hrt cs37">및 아동학대 관련 범죄전력조회 동의서</span></div></div></div></div><div class="hce" style="left:0mm;top:14.83mm;width:162.09mm;height:5mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI"><div class="hls ps41" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:161.09mm;"></div></div></div></div><div class="hce" style="left:0mm;top:19.83mm;width:14.76mm;height:59.66mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:27.89mm;"><div class="hls ps43" style="line-height:3.88mm;white-space:nowrap;left:0.00mm;top:0.35mm;height:3.88mm;width:12.76mm;"><span class="hrt cs40">대상자</span></div></div></div></div><div class="hce" style="left:14.76mm;top:19.83mm;width:22.82mm;height:22.44mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:9.45mm;"><div class="hls ps43" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.35mm;height:3.53mm;width:20.83mm;"><span class="hrt cs41">성 &nbsp;명</span></div></div></div></div><div class="hce" style="left:37.59mm;top:19.83mm;width:124.5mm;height:22.44mm;"><div class="hcD" style="left:1mm;top:0.5mm;"><div class="hcI" style="top:8.92mm;"><div class="hls ps45" style="line-height:2.79mm;white-space:nowrap;left:0.71mm;top:0.88mm;height:3.53mm;width:121.79mm;"></div></div></div></div><div class="hce" style="left:14.76mm;top:42.27mm;width:22.82mm;height:18.23mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:2.94mm;"><div class="hls ps43" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.35mm;height:3.53mm;width:20.83mm;"><span class="hrt cs41">주민등록번호</span></div><div class="hls ps43" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:4.94mm;height:3.53mm;width:20.83mm;"><span class="hrt cs24">(외국인의 경</span></div><div class="hls ps43" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:9.17mm;height:3.53mm;width:20.83mm;"><span class="hrt cs24">우 생년월일)</span></div></div></div></div><div class="hce" style="left:37.59mm;top:42.27mm;width:40mm;height:18.23mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:7.53mm;"><div class="hls ps46" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:39.00mm;"></div></div></div></div><div class="hce" style="left:77.59mm;top:42.27mm;width:37.01mm;height:18.23mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:5.62mm;"><div class="hls ps42" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:0.35mm;height:3.18mm;width:35.01mm;"><span class="hrt cs43">외국인등록번호(외국인인</span></div><div class="hls ps42" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:4.16mm;height:3.18mm;width:35.01mm;"><span class="hrt cs43">의 경우만 기입)</span></div></div></div></div><div class="hce" style="left:114.6mm;top:42.27mm;width:47.49mm;height:18.23mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:7.53mm;"><div class="hls ps44" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:46.50mm;"></div></div></div></div><div class="hce" style="left:14.76mm;top:60.5mm;width:22.82mm;height:18.99mm;"><div class="hcD" style="left:1mm;top:1mm;"><div class="hcI" style="top:5.44mm;"><div class="hls ps43" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.35mm;height:3.53mm;width:20.83mm;"><span class="hrt cs24">연락처</span></div><div class="hls ps43" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:4.94mm;height:3.53mm;width:20.83mm;"><span class="hrt cs24">(휴대폰 등)</span></div></div></div></div><div class="hce" style="left:37.59mm;top:60.5mm;width:124.5mm;height:18.99mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:7.73mm;"><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:123.50mm;"></div></div></div></div><div class="hce" style="left:0mm;top:79.49mm;width:162.09mm;height:2.35mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:1mm;"><div class="hls ps44" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:161.09mm;"></div></div></div></div><div class="hce" style="left:0mm;top:81.84mm;width:162.09mm;height:27.78mm;"><div class="hcD" style="left:1.8mm;top:1mm;"><div class="hcI" style="top:1.54mm;"><div class="hls ps54" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:158.48mm;"><span class="hrt cs41">본인은 대덕소프트웨어마이스터고등학교 (시설)(예: 유치원, 어린이집, 아동복지시설, 청소년쉼터, 청소년활</span></div><div class="hls ps54" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:7.06mm;height:3.53mm;width:158.48mm;"><span class="hrt cs41">동시설, 의료기관 등) 취업자</span><span class="hrt cs45">(취업예정자)로서, 「아동ㆍ청소년의 성보호에 관한 법률」 제56조 및 같은 법&nbsp;</span></div><div class="hls ps54" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:14.11mm;height:3.53mm;width:158.48mm;"><span class="hrt cs45">시행령 제25조에 따른 성범죄경력</span><span class="hrt cs41">&nbsp;조회,</span><span class="hrt cs24">「</span><span class="hrt cs25">아동복지법」 제29조의3에&nbsp;</span><span class="hrt cs24">따른 아동학대 범죄전력 조회 신청</span></div><div class="hls ps54" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:21.17mm;height:3.53mm;width:158.48mm;"><span class="hrt cs24">에 동의</span><span class="hrt cs41">합니다.</span></div></div></div></div><div class="hce" style="left:0mm;top:109.62mm;width:162.09mm;height:15.55mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:6.19mm;"><div class="hls ps55" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.18mm;width:161.09mm;"><span class="hrt cs42">&nbsp;&nbsp;2026년 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;월 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;일</span></div></div></div></div><div class="hce" style="left:0mm;top:125.17mm;width:95.33mm;height:11.56mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:4.01mm;"><div class="hls ps47" style="line-height:3.53mm;white-space:nowrap;left:3.53mm;top:0.00mm;height:3.53mm;width:89.00mm;"><span class="hrt cs41">&nbsp;&nbsp;&nbsp;동의자</span></div></div></div></div><div class="hce" style="left:95.33mm;top:125.17mm;width:66.76mm;height:11.56mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.01mm;"><div class="hls ps48" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:3.53mm;width:65.76mm;"><span class="hrt cs24">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><span class="hrt cs46">(서명 또는 인)</span></div></div></div></div><div class="hce" style="left:0mm;top:136.73mm;width:162.09mm;height:17.08mm;"><div class="hcD" style="left:1.8mm;top:0.5mm;"><div class="hcI" style="top:6.24mm;"><div class="hls ps49" style="line-height:4.59mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:4.59mm;width:159.29mm;"><span class="hrt cs47">대전유성</span><span class="hrt cs48"><u>경찰서장</u></span><span class="hrt cs47">&nbsp;</span><span class="hrt cs41">귀하</span></div></div></div></div><div class="hce" style="left:0mm;top:153.8mm;width:162.09mm;height:24.78mm;"><div class="hcD" style="left:1.8mm;top:1mm;"><div class="hcI"><div class="hls ps50" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:158.48mm;"></div><div class="hls ps50" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:1.94mm;height:3.53mm;width:158.48mm;"></div><div class="hls ps50" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:4.05mm;height:3.53mm;width:158.48mm;"></div><div class="hls ps50" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:6.17mm;height:3.53mm;width:158.48mm;"></div><div class="hls ps50" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:8.29mm;height:3.53mm;width:158.48mm;"></div><div class="hls ps50" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:10.40mm;height:3.53mm;width:158.48mm;"></div><div class="hls ps50" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:12.52mm;height:3.53mm;width:158.48mm;"></div><div class="hls ps50" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:14.64mm;height:3.53mm;width:158.48mm;"></div><div class="hls ps50" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:16.75mm;height:3.53mm;width:158.48mm;"></div></div></div></div><div class="hce" style="left:0mm;top:178.58mm;width:162.09mm;height:6.64mm;"><div class="hcD" style="left:1mm;top:0.5mm;"><div class="hcI" style="top:0.5mm;"><div class="hls ps50" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:161.09mm;"></div><div class="hls ps51" style="line-height:3.53mm;white-space:nowrap;left:0.00mm;top:2.12mm;height:3.53mm;width:161.09mm;"><span class="hrt cs23">유의사항</span></div></div></div></div><div class="hce" style="left:0mm;top:185.22mm;width:162.09mm;height:34.76mm;"><div class="hcD" style="left:1mm;top:0.5mm;"><div class="hcI" style="top:4.05mm;"><div class="hls ps52" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:1.06mm;height:3.18mm;width:161.09mm;"><span class="hrt cs22">&nbsp;</span><span class="hrt cs29">1. 개인정보 수집항목 :&nbsp;</span><span class="hrt cs30">*표 항목(성명, 주민등록번호,&nbsp;</span><span class="hrt cs31">외국인의 경우 외국인등록번호)</span></div><div class="hls ps52" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:7.20mm;height:3.18mm;width:161.09mm;"><span class="hrt cs29">&nbsp;2.&nbsp;</span><span class="hrt cs30">대상자가 외국인의 경우 성명(영문), 외국인등록번호를 적습니다.</span></div><div class="hls ps56" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:13.34mm;height:3.18mm;width:161.09mm;"><span class="hrt cs29">&nbsp;3.&nbsp;</span><span class="hrt cs32">개인정보 제공 거부에 따른 제한사항 :&nbsp;</span><span class="hrt cs33">귀하는 개인정보 제공 동의를 거부를 권리가 있으나, 동의 거부 시에</span></div><div class="hls ps56" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:18.42mm;height:3.18mm;width:161.09mm;padding-left:5.94mm;"><span class="hrt cs33">는 취업에 제한을 받을 수 있습니다.</span></div><div class="hls ps56" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:24.55mm;height:3.18mm;width:161.09mm;"><span class="hrt cs29">&nbsp;4.&nbsp;</span><span class="hrt cs32">개인정보의 보유 :&nbsp;</span><span class="hrt cs34">수집된 고객의 개인정보는&nbsp;</span><span class="hrt cs35">성범죄 경력조회 신청 등을 위하여 사용됩니다.</span></div></div></div></div><div class="hce" style="left:0mm;top:219.99mm;width:162.09mm;height:8.81mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:5.99mm;"><div class="hls ps53" style="line-height:2.82mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:2.82mm;width:161.09mm;"><span class="hrt cs27">210㎜×297㎜[백상지 80g/㎡(재활용품)]</span></div></div></div></div></div><div class="hcD" style="left:0.5mm;top:232.29mm;width:162.09mm;height:11.28mm;overflow:hidden;"><div class="hcI" ><div class="hls ps19" style="line-height:2.79mm;white-space:nowrap;left:0mm;top:-0.18mm;height:11.28mm;width:161.09mm;"><span class="hrt cs17">&nbsp;</span><div class="haN" style="left:0mm;top:0mm;width:2.1mm;height:11.28mm;"><span class="hrt cs17"></span></div><span class="hrt cs17">&nbsp;</span></div><div class="hls ps40" style="line-height:2.79mm;white-space:nowrap;left:0mm;top:5.46mm;height:11.28mm;width:161.09mm;"><span class="hrt cs17">성범죄 경력 조회 및 아동학대 관련 범죄전력조회 동의서</span></div></div></div></div></div></div></div><div class="hpN" style="left:105mm;top:287mm;width:11.43mm;height:3.81mm;"><span class="hrt cs0">- 11 -</span></div></div></body></html>
